[package]
name = "axum-playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.1", features = ["ws"] }
futures = "0.3.25"
tokio = { version = "1.24.1", features = ["full"] }
tower = { version = "0.4.13", features = ["util"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }