[package]
name = "axum-playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.1", features = ["ws"] }
futures = "0.3.25"
tokio = { version = "1.24.1", features = ["full"] }
tower = { version = "0.4.13", features = ["util"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
notify = { version = "5.0.0", default-features = false, feature= ["macos_kqueue", "serde"] }
notify-debouncer-mini = { version = "0.2.1", default-features = false, feature= ["serde"] }
microkv = { version = "0.2.9", feature= ["serde"] }
serde = "1.0.152"